[gd_scene load_steps=25 format=3 uid="uid://5y44wp4db60"]

[ext_resource type="Script" path="res://scenes/enemy/enemy_handler.gd" id="1_udkyl"]
[ext_resource type="Resource" uid="uid://d384vrpgclv3k" path="res://enemies/workers/level1_enemy1.tres" id="2_57gmp"]
[ext_resource type="PackedScene" uid="uid://12rfq5pjfu5g" path="res://scenes/modifier_handler/modifier_handler.tscn" id="2_mdwel"]
[ext_resource type="PackedScene" uid="uid://c35pkqpitei47" path="res://scenes/modifier_handler/modifier.tscn" id="3_67ax7"]
[ext_resource type="Resource" uid="uid://doy21ln1ou8a6" path="res://enemies/workers/level1_enemy2.tres" id="3_t4g4a"]
[ext_resource type="Resource" uid="uid://bwekqfte1lwse" path="res://enemies/security/hired_security.tres" id="4_a2ufx"]
[ext_resource type="Resource" uid="uid://dnyqq67cumk7k" path="res://enemies/workers/level2_enemy1.tres" id="4_vw026"]
[ext_resource type="Resource" uid="uid://dap7e1f6sheu3" path="res://enemies/workers/level2_enemy2.tres" id="5_6xlui"]
[ext_resource type="Resource" uid="uid://dvb3orc884fuq" path="res://enemies/security/rent_a_cop.tres" id="7_sfcep"]
[ext_resource type="Resource" uid="uid://dv1cdjdl0ljep" path="res://enemies/managers/level1/micro_manager.tres" id="8_gcpxj"]
[ext_resource type="Resource" uid="uid://clnhxn34lxle3" path="res://enemies/security/fixer.tres" id="8_un7hs"]
[ext_resource type="Resource" uid="uid://coev6mt7fsjs0" path="res://enemies/workers/level3_enemy1.tres" id="9_n0d87"]
[ext_resource type="Resource" uid="uid://elxehtprb5ts" path="res://enemies/managers/level1/obstructive_manager.tres" id="9_x0vss"]
[ext_resource type="Resource" uid="uid://b5gfh8aruihmu" path="res://enemies/managers/level1/procrastinator_manager.tres" id="10_xvoqc"]
[ext_resource type="Resource" uid="uid://daehxmlkmvq5j" path="res://enemies/workers/level3_enemy2.tres" id="10_ylyp6"]
[ext_resource type="Resource" uid="uid://cdgf23u4lcb0k" path="res://enemies/managers/level2/hiring_manager.tres" id="11_8pers"]
[ext_resource type="Resource" uid="uid://crg4sw4gh2asa" path="res://enemies/managers/level2/bureaucratic_manager.tres" id="12_u7745"]
[ext_resource type="Resource" uid="uid://cbgw3qs433r3o" path="res://enemies/managers/level2/payroll_manager.tres" id="13_8oasg"]
[ext_resource type="Resource" uid="uid://ife852bw0j74" path="res://enemies/managers/level2/impatient_manager.tres" id="14_phqfy"]
[ext_resource type="Resource" uid="uid://dmlbufit8abr6" path="res://enemies/managers/level3/delegator_manager.tres" id="18_b85i1"]
[ext_resource type="Resource" uid="uid://byvh5cafid3t" path="res://enemies/managers/level3/dismissive_manager.tres" id="19_m1603"]
[ext_resource type="Resource" uid="uid://cic82nxlagxjr" path="res://enemies/managers/level3/insperational_manager.tres" id="20_vwyqn"]
[ext_resource type="Resource" uid="uid://curjphjpq807o" path="res://enemies/managers/level3/nitpicking_manager.tres" id="21_1wuvu"]
[ext_resource type="Resource" uid="uid://dforiel7p0sak" path="res://enemies/managers/level3/reactionary_manager.tres" id="22_hsyhr"]

[node name="EnemyHandler" type="Node2D" groups=["enemy_handler"]]
position = Vector2(983, 0)
script = ExtResource("1_udkyl")
all_enemies = Array[Resource("res://custom_resources/enemy_stats.gd")]([ExtResource("4_vw026"), ExtResource("5_6xlui"), ExtResource("4_a2ufx"), ExtResource("7_sfcep"), ExtResource("3_t4g4a"), ExtResource("2_57gmp"), ExtResource("8_un7hs"), ExtResource("9_n0d87"), ExtResource("10_ylyp6")])
all_managers = Array[Resource("res://custom_resources/enemy_stats.gd")]([ExtResource("8_gcpxj"), ExtResource("9_x0vss"), ExtResource("10_xvoqc"), ExtResource("11_8pers"), ExtResource("12_u7745"), ExtResource("13_8oasg"), ExtResource("14_phqfy"), ExtResource("18_b85i1"), ExtResource("19_m1603"), ExtResource("20_vwyqn"), ExtResource("21_1wuvu"), ExtResource("22_hsyhr")])

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 297.0
offset_bottom = 357.0
color = Color(1, 0.21268, 0.159696, 1)

[node name="EnemyGridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(215, 350)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 4.0
offset_right = 253.0
offset_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 35
theme_override_constants/v_separation = 4
columns = 2

[node name="ModifierHandler" parent="." instance=ExtResource("2_mdwel")]

[node name="FightCostModifier" parent="ModifierHandler" instance=ExtResource("3_67ax7")]
type = 2
